Meu primeiro trabalho

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -8,6 +8,7 @@
 <h1>Título e subtítulos de h1 até h6 são os tamanhos</h1>
 <h6> é o menor tamanho</h6>
 <p> P é parágrafo</p>
+<span> Texto que não ocupa toda extensão da tela, se quiser por uma imagem do lado por exemplo </span>
 <b> significa bold (negrito) </b>
 <i> itálico </i>
 
@@ -42,5 +43,11 @@
 
 
 <img src="eu.jpeg" title=" Todo Nicolas Cagezinho" />
+
+<button> Texto do botão </button>
+
+<!-- <select> pesquisar select e option </select> -->
+<!-- Uma div é uma caixinha uma divisória -->
+<!-- tag semântica -->
 </body>
 </html> 
